Bug 77222 - [BDW]Piglit spec_ARB_sample_shading_builtin-gl-sample-position_4 fails
Summary: [BDW]Piglit spec_ARB_sample_shading_builtin-gl-sample-position_4 fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-09 07:06 UTC by lu hua
Modified: 2014-04-21 05:49 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2014-04-09 07:06:02 UTC
System Environment:
--------------------------
Platform: Broadwell
Libdrm:		(master)libdrm-2.4.52-10-g1cb5fc706cf5913d9dee33c939f65a23ecea17a5
Mesa:		(master)159cec9dec2320d821d388c0df8140c7705b6e0b
Xserver:	(master)xorg-server-1.15.99.901-204-g901fbfbbbd71c0d82080957f8ba09eebbc786f2b
Xf86_video_intel:(master)2.99.911-44-g3310ee89c1f1a663de5f5b12b8125809a213996f
Cairo:		(master)bb17403622e9ea474017e0039af8ee48b2b285db
Libva:		(staging)960352aaf1e11891a533ce2c98b16edde24d6851
Libva_intel_driver:(staging)150f67c67bd92cd201b75a92388fe3a63b00cd8a
Kernel:	(drm-intel-nightly) 7cd8b823493acc320c7db9112de9d4e21c6dbd11

Bug detailed description:
-----------------------------
It fails on Broadwell with Mesa master branch, but work well on Haswell.
spec_ARB_sample_shading_builtin-gl-sample-position_6 and spec_ARB_sample_shading_builtin-gl-sample-position_8 also fail.

output:
sample[0]_pos = {0.375000, 0.125000}
sample[1]_pos = {0.875000, 0.375000}
sample[2]_pos = {0.125000, 0.625000}
sample[3]_pos = {0.625000, 0.875000}
Probe color at (0,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 0.501961 0.501961 0.000000 1.000000
PIGLIT: {'result': 'fail' }


Reproduce steps:
----------------------------
1. xinit
2. ./bin/arb_sample_shading-builtin-gl-sample-position 4 -auto
Comment 1 Kenneth Graunke 2014-04-18 18:57:19 UTC
Fixed by:

commit a1273a07edb58ce3017f30014626766724cd8e53
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Apr 17 17:58:45 2014 -0700

    i965/fs: Implement fs_inst::force_sechalf support on Broadwell.
    
    Back when I originally wrote this code, force_sechalf was only used for
    Gen4 code, so I didn't bother hooking it up.  However, it's used more
    generally these days.  In particular, we use it for computing
    gl_SamplePosition.
    
    Fixes Piglit's spec/ARB_sample_shading/builtin-gl-sample-position tests.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77222
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Eric Anholt <eric@anholt.net>
Comment 2 lu hua 2014-04-21 05:49:35 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.